# ai-soc-soar-mvp

./: .env.example  .gitignore  CLEANROOM_POLICY.md  PROVENANCE.md  README.md  day-1.html  day-4.html  day-5.html  day-6.html  day-7.html  index.html  style.css
.github/workflows/: ci.yml  pages.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  automation.py  connectors.py  incidents.py  settings.py
backend/app/connectors/: opensearch.py  wazuh.py  wazuh_api.py
backend/app/core/: settings.py
backend/app/db/: models.py  session.py  sqlite_store.py
backend/app/models/: alert.py  auth.py  automation.py  connectors.py  incidents.py  settings.py  triage.py
backend/app/services/: alert_store.py  auth.py  crypto.py  threat_intel.py  triage.py
codex-skills/ai-soc-architecture/: SKILL.md
codex-skills/llm-triage-agent/: SKILL.md
codex-skills/secure-soc-mvp/: SKILL.md
demo/video/: demo-flow.html
docs/: ARCHITECTURE.md  BUILD_SEQUENCE.md  CODEX_SKILLS.md  DAY2_PRODUCT_PLAN.md  DAY3_WAZUH_PIPELINE.md  DAY4_AI_TRIAGE.md  DAY4_DAY5_ENGINEERING_BACKLOG.md  DAY7_DEMO_RUNBOOK.md  FINAL_JUDGE_DEMO_CHECKLIST.md  MVP_EXECUTION_MEMORY.md  NORMALIZED_ALERT_SCHEMA.md  SECURE_SDLC_CICD.md  TECH_STACK.md  WAZUH_N8N_SETUP_CHECKLIST.md  day-2.html  day-3.html  day-4.html  day-5.html  day-6.html  day-7.html  index.html
frontend/: index.html  package-lock.json  package.json
scripts/: capture_demo_screenshots.mjs  smoke_local.sh
site/: day-1.html  day-2.html  day-3.html  day-4.html  day-5.html  day-6.html  day-7.html  index.html  style.css
(+19 files in other folders)
