[project]
name = "ai-soc-soar-backend"
version = "0.1.0"
description = "FastAPI backend for AI SOC SOAR MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1"
]

[tool.ruff]
line-length = 100
