[project]
name = "netrashield-backend"
version = "0.1.0"
description = "FastAPI backend for NetraShield MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "email-validator>=2.2.0",
  "pydantic-settings>=2.2.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.1",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1"
]

[tool.ruff]
line-length = 100
